# ron-lsp

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml  ron.toml
example/data/: config.ron  config_complete.ron  enum_variants.ron  error_examples.ron  generic_test.ron  mixed_syntax.ron  multiple_structs_in_enum.ron  nested_enum.ron  post.ron  settings.ron  test_struct_variant.ron  user.ron  vessels.ron
example/data/posts/: introduction.post.ron  ownership.post.ron  tooling.post.ron
example/src/: lib.rs  models.rs
jetbrains-plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
jetbrains-plugin/src/main/grammar/: Ron.flex
jetbrains-plugin/src/main/kotlin/today/jason/ronlsp/: RonBundle.kt  RonColors.kt  RonColorsSettingsPage.kt  RonFileType.kt  RonIcons.kt  RonLanguage.kt  RonLexer.kt  RonLspServerDescriptor.kt  RonLspServerSupportProvider.kt  RonSyntaxHighlighter.kt  RonSyntaxHighlighterFactory.kt  RonTokenTypes.kt
jetbrains-plugin/src/main/kotlin/today/jason/ronlsp/settings/: RonLspSettings.kt  RonLspSettingsConfigurable.kt
jetbrains-plugin/src/main/resources/colors/: RonDarcula.xml  RonDefault.xml
jetbrains-plugin/src/main/resources/messages/: RonBundle.properties
nvim-plugin/: ron.lua
src/: annotation_parser.rs  code_actions.rs  completion.rs  config.rs  diagnostic_reporter.rs  diagnostics.rs  format.rs  main.rs  ron_parser.rs  rust_analyzer.rs  tree_sitter_parser.rs  ts_utils.rs
tree-sitter-ron/: Cargo.toml  build.rs  grammar.js  package.json
tree-sitter-ron/bindings/rust/: build.rs  lib.rs
tree-sitter-ron/src/: grammar.json  node-types.json  parser.c
vscode-extension/: README.md  language-configuration.json  package-lock.json  package.json  ron.tmGrammar.json
vscode-extension/src/: extension.ts
