[package]
name = "ron-lsp"
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/jasonjmcghee/ron-lsp"
description = "An LSP and cli for RON files that provides autocomplete, diagnostics, go to definition, code actions, and hover support based on Rust type annotations"
exclude = [
    "jetbrains-plugin",
    "vscode-extension",
]

[[bin]]
name = "ron-lsp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ron = "0.11"
regex = "1.10"
lazy_static = "1.4"
tree-sitter = "0.25.10"
ron-lsp-tree-sitter = { version = "0.1.0", path = "tree-sitter-ron" }

# config file
toml = "0.9.8"
globset = "0.4"

# For Rust type analysis
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# For workspace/file discovery
walkdir = "2.4"

# For CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
ariadne = { version = "0.4", optional = true }
serde_json = "1.0"
serde = "1.0"

[features]
default = ["cli"]
cli = ["clap", "ariadne"]
